--- a/infrastructure/Makefile
+++ b/infrastructure/Makefile
@@ -5,4 +5,12 @@ gen-openapi:
 	cd ../openapi && \
 	openapi-generator generate -i openapi.yaml -g rust-server -o ../server
 serve:
-	cd ../server && cargo run
+	docker-compose exec app cargo run
+up:
+	docker-compose up -d
+down:
+	docker-compose down
+build:
+	docker-compose build
+restart:
+	docker-compose down && docker-compose up -d
